# MovibeCodingProjects

./: .gitignore  README.md
AIPhotoRecognitionTool/: .gitignore  CHANGELOG.md  LICENSE  README.md  build_exe.bat  photo_recognition_gui_production.py  pyproject.toml  requirements.txt  setup.py  start.bat
AIPhotoRecognitionTool/.github/workflows/: ci.yml
AIPhotoRecognitionTool/scripts/: e2e_dry_run.py  install.bat  install_gpu_deps.py  launcher.py  run.bat  run_dedup_scenario.py
AIPhotoRecognitionTool/src/photofilter/: __init__.py  __main__.py
AIPhotoRecognitionTool/src/photofilter/core/: __init__.py  deduplication.py  detectors.py  recognition.py
AIPhotoRecognitionTool/src/photofilter/gui/: __init__.py  main_window.py
AIPhotoRecognitionTool/src/photofilter/utils/: __init__.py  scanner.py
AIPhotoRecognitionTool/tests/: __init__.py  test_all.py  test_dedup.py  test_deduplication.py  test_detectors.py  test_gui.py  test_gui_dedup_workflow.py  test_installer_accelerators.py  test_recognition.py
PDFUtils/: .coveragerc  .gitignore  LICENSE  PDFUtils.spec  README.md  build_package.py  pdfutils_launcher.py  pyproject.toml  pytest.ini  requirements.txt
PDFUtils/docs/: component_usage.md
PDFUtils/docs/reports/: FINAL_SUMMARY.md  TEST_RUNNER_GUIDE.md
PDFUtils/examples/: test_responsive.py  test_responsive_simple.py
PDFUtils/pdfutils/: __init__.py  __main__.py  pdf_ops.py  responsive_app.py  responsive_main.py  utils.py
PDFUtils/pdfutils/gui/: __init__.py
PDFUtils/pdfutils/gui/components/: __init__.py  constants.py  file_selector.py  notification_panel.py  output_file_selector.py  progress_tracker.py  responsive_frame.py  responsive_section.py  status_indicator.py  tab_content_frame.py
PDFUtils/pdfutils/tabs/: __init__.py  about_tab.py  barcode_tab.py  base_tab.py  compress_tab.py  extract_tab.py  handwriting_ocr_tab.py  merge_tab.py  ocr_tab.py  split_tab.py  table_extraction_tab.py
PDFUtils/scripts/debug/: minimal_test.py
PDFUtils/scripts/dev/: smoke_check.py  status_check.py
PDFUtils/scripts/launcher/: pdfutils_launcher.py
PDFUtils/tests/: __init__.py  base_test.py  conftest.py  conftest_responsive.py  safe_mocks.py  shared_test_utils.py  test_about_tab.py  test_barcode_tab.py  test_basic_functionality.py  test_compress_tab.py  test_e2e_ocr.py  test_extract_tab.py  test_file_selector.py  test_file_selector_parameterized.py  test_fixture_example.py  test_gui_helpers.py  test_handwriting_ocr_tab.py  test_launcher.py  test_memory_leaks.py  test_merge_tab.py  test_minimal.py  test_minimal_memory.py  test_minimal_workflow.py  test_notification_panel.py  test_ocr_error_conditions.py  test_ocr_file_extensions.py  test_ocr_kraken.py  test_ocr_preprocessing.py  test_ocr_tab.py  test_ocr_tab_simplified.py  test_output_file_selector.py  test_output_file_selector_parameterized.py  test_pdf_ops.py  test_pdf_ops_edge_cases.py  test_progress_tracker.py  test_responsive_section.py  test_responsive_tabs.py  test_safe_mocks.py  test_simple.py  test_simple_ui.py  (+8 more)
YTVideoDownloader/: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  app_logger.py  build_package.py  cookie_help_system.py  cookie_manager.py  download_threads.py  main.py  package.py  playlist_downloader.py  pyproject.toml  requirements.txt  run.bat  run.py  utils.py
YTVideoDownloader/gui/: main_window.py
YTVideoDownloader/resources/: authentication_error_help.html  browser_detection_help.html  cookie_export_help.html  wizard_browser_setup.html  wizard_completion.html  wizard_manual_import.html  wizard_welcome.html
YTVideoDownloader/tests/: conftest.py  test_download_failure_detection.py  test_e2e_complete_coverage.py  test_e2e_real_downloads.py  test_format_availability.py  test_format_mixing.py  test_playlist.py  test_playlist_error_handling.py  test_random_format_combinations.py
YTVideoDownloader/tests/integration/: test_gui_cookie_integration.py
YTVideoDownloader/tests/unit/: test_cookie_management.py  test_cookie_precedence.py  test_download_logic.py  test_format_extraction.py  test_gui_cookie_feedback.py  (+5 more)
